1. 使用 autotable 3.2.10 修复列宽不正确问题

--- a/gen.html
+++ b/gen.html
@@ -24,7 +24,8 @@
     <script src="jspdf.min.js"></script>
     <!--    <script src="font-han-sans.js"></script>-->
     <script src="font-simsun-normal.js"></script>
-    <script src="jspdf-autotable-3.2.4.js"></script>
+<!--    <script src="jspdf-autotable-3.2.4.js"></script>-->
+        <script src="jspdf-autotable-3.2.10.js"></script>
 </head>
 
 <body>
@@ -389,7 +390,8 @@
                                 bodyStyles: {
                                     halign: 'center',
                                     valign: 'middle',
-                                    minCellWidth: 20,
+                                    minCellWidth: 15,
+                                    cellWidth: 'auto',
                                     minCellHeight: 0
                                 },
                                 styles: {
