--- a/gen.html
+++ b/gen.html
@@ -24,9 +24,9 @@
     <script src="jspdf.min.js"></script>
     <!--    <script src="font-han-sans.js"></script>-->
     <script src="font-simsun-normal.js"></script>
-<!--    <script src="jspdf-autotable-3.2.4.js"></script>-->
-        <script src="jspdf-autotable-3.2.10.js"></script>
-<!--    <script src="jspdf-autotable-3.2.15.js"></script>-->
+    <!--    <script src="jspdf-autotable-3.2.4.js"></script>-->
+    <script src="jspdf-autotable-3.2.10.js"></script>
+    <!--    <script src="jspdf-autotable-3.2.15.js"></script>-->
 </head>
 
 <body>
@@ -317,8 +317,8 @@
                             }
                             var imgObj = JSON.parse(imgJson);
                             // 定义图片宽度和高度
-                            var imgWidth = imgObj.width > 0 ? imgObj.width : 50;
-                            var imgHeight = imgObj.height > 0 ? imgObj.height : 50;
+                            var imgWidth = imgObj.width > 0 ? imgObj.width : 100;
+                            var imgHeight = imgObj.height > 0 ? imgObj.height : 100;
                             console.log("imgWidth:" + imgWidth + ", imgHeight:" + imgHeight)
                             var scaleW = 1;
                             var scaleH = 1;
@@ -342,14 +342,14 @@
                             // 插入图片到 PDF 中，并居中显示
                             var type = imgObj.src.substring(imgObj.src.indexOf("/") + 1, imgObj.src.indexOf(";"))
                             doc.addImage(imgObj.src, type, x, cursorY, imgWidth, imgHeight);
-                            // if (cursorY > 280) { // 检查导致分页的 Y 坐标位置
-                            //     doc.addPage();
-                            //     contentPageIndex++;
-                            //     cursorY = 20; // 重置 Y 坐标位置为页面顶部
-                            // }
                             fontSize = SIZE_CONTENT - 4;
                             cursorY += imgHeight + fontSize;
                             doc.setFontSize(fontSize);
+                            if (cursorY >= (pdfHeight - honPadding - fontSize)) {
+                                doc.addPage();
+                                contentPageIndex++;
+                                cursorY = START_Y;
+                            }
                             var imgTitleWidth = doc.getStringUnitWidth(imgObj.pdfImgName) * doc.internal.getFontSize() / doc.internal.scaleFactor;
                             doc.text(imgObj.pdfImgName, (pdfWidth - imgTitleWidth) / 2, cursorY);
                             cursorY += fontSize + 2;
