1. 支持导入配置

--- a/config.html
+++ b/config.html
@@ -67,6 +67,13 @@
                 下载当前配置
             </button>
         </div>
+
+        <div class="container-fluid p-5 bg-light text-black text-center">
+            <div>
+                导入配置： <input type="file" name="file" id="fileId"/>
+            </div>
+        </div>
+
         <div class="row" style="padding-top: 55px;text-align: left">
             <div class="col" style="width: 70%">
                 <div class="card border-info bg-light"
@@ -271,6 +278,53 @@
         document.body.appendChild(downloadLink);
         downloadLink.click();
     }
+
+    function readUploadConfig() {
+        var fileInput = document.getElementById("fileId");
+
+        // 添加事件监听器，当文件选择变化时触发
+        function handleFileSelect(event) {
+            var files = event.target.files; // 读取文件内容
+            if (files.length === 0 || files.length > 1) {
+                alert('请选择一个文件');
+            } else {
+                for (var i = 0; i < files.length; i++) {
+                    var reader = new FileReader(); //新建一个FileReader
+                    reader.readAsText(files[i], "UTF-8"); //读取文件
+                    reader.onload = function (evt) { //读取完文件之后会回来这里
+                        var fileString = evt.target.result; // 读取文件内容
+                        var startIndex = fileString.indexOf('[');
+                        var endIndex = fileString.lastIndexOf(']');
+                        var arrJSON = fileString.substring(startIndex, endIndex + 1);
+                        var arr = JSON.parse(arrJSON);
+                        // 合并到当前配置
+                        for (var j = 0; j < arr.length; j++) {
+                            var title = arr[j].title;
+                            var innerIndex = -1;
+                            for (var k = 0; k < app.models.length; k++) {
+                                if (app.models[k].title === title) {
+                                    innerIndex = k;
+                                    break;
+                                }
+                            }
+                            if (innerIndex > -1) {
+                                // 已存在章节名，在原有内容后追加
+                                app.models[innerIndex].contents.push.apply(app.models[innerIndex].contents, arr[j].contents);
+                            } else {
+                                // 不存在，新增章节
+                                app.models.push(arr[j]);
+                            }
+                        }
+                        console.log(app.models);
+                    }
+                }
+            }
+        }
+
+        fileInput.addEventListener('change', handleFileSelect, false);
+    }
+
+    readUploadConfig();
 
     function clearLocalCache() {
         localStorage.removeItem('models')
